# task_priority_kinematic_control

./: .gitignore  CMakeLists.txt  README.md  package.xml  task_priority_kinematic_control_core_plugins.xml  task_priority_kinematic_control_plugins.xml
config/: task_priority_controller_ros2_control.yaml  task_priority_kinematic_control.yaml  task_priority_target_markers.yaml
docs/: build_task_priority_pdf.py  task_priority_kinematic_control_deep_dive.md
include/task_priority_kinematic_control/core/: common.hpp  hierarchy_solver.hpp  runtime_node.hpp  task_manager.hpp  task_priority_controller.hpp  whole_body_model.hpp
include/task_priority_kinematic_control/kinematics/: kdl_kinematics_backend.hpp  kinematics_backend.hpp  pinocchio_kinematics_backend.hpp
include/task_priority_kinematic_control/tasks/: base_yaw_task.hpp  end_effector_orientation_task.hpp  end_effector_pose_task.hpp  end_effector_position_task.hpp  end_effectors_relative_pose_task.hpp  frame_pose_task.hpp  joint_limits_task.hpp  joint_nominal_task.hpp  joint_trajectory_task.hpp  self_collision_avoidance_task.hpp  task_base.hpp
launch/: task_priority_kinematic_control.launch.py  task_priority_target_markers.launch.py
msg/: ControllerOutput.msg  HierarchyState.msg  SolverDiagnostics.msg  TaskGainUpdate.msg  TaskState.msg  TaskStatus.msg
src/: main.cpp  task_priority_target_markers.cpp
src/core/: hierarchy_solver.cpp  runtime_node.cpp  task_manager.cpp  task_priority_controller.cpp  whole_body_model.cpp
src/kinematics/: kdl_kinematics_backend.cpp  pinocchio_kinematics_backend.cpp
src/tasks/: base_yaw_task.cpp  end_effector_orientation_task.cpp  end_effector_pose_task.cpp  end_effector_position_task.cpp  end_effectors_relative_pose_task.cpp  frame_pose_task.cpp  joint_limits_task.cpp  joint_nominal_task.cpp  joint_trajectory_task.cpp  self_collision_avoidance_task.cpp  task_base.cpp
srv/: ListTasks.srv  ReorderTasks.srv  SetSolverConfig.srv  SetTaskDisabled.srv  SetTaskEnabled.srv  SetTaskGains.srv  SetTaskJointActivation.srv  SwitchBackend.srv
test/: test_end_effectors_relative_pose_task.cpp  test_hierarchy_solver.cpp  test_joint_limits_task.cpp  test_joint_nominal_task.cpp  test_joint_trajectory_task.cpp
